--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,9 +16,9 @@ jobs:
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v1.0.3
         with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_KEY }}
+          host: ${{ secrets.NEW_EC2_HOST }}
+          username: ${{ secrets.NEW_EC2_USER }}
+          key: ${{ secrets.NEW_EC2_KEY }}
           script: |
             cd /var/www/fast-api-python
             git pull origin main
