--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,7 @@ jobs:
 
             cd ${{ secrets.EC2_APP_DIR }}
 
-            git fetch origin
-            git reset --hard origin/main
+            git pull origin main
 
             source venv/bin/activate
             pip install -r requirements.txt
